--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -24,15 +24,6 @@
                                     <rect key="frame" x="154" y="69" width="93" height="50"/>
                                 </variation>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Zig Zag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AbW-07-BmS">
-                                <rect key="frame" x="110" y="183" width="154" height="61"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="29"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="151" y="146" width="96" height="40"/>
-                                </variation>
-                            </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="bottom" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Gonzaga Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lo7-id-1RW">
                                 <rect key="frame" x="89" y="329" width="197" height="30"/>
                                 <constraints>
@@ -46,7 +37,7 @@
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="102" y="232" width="197" height="30"/>
+                                    <rect key="frame" x="103" y="231" width="200" height="30"/>
                                     <mask key="constraints">
                                         <include reference="fGF-7q-DbM"/>
                                     </mask>
@@ -95,7 +86,7 @@
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="102" y="194" width="197" height="30"/>
+                                    <rect key="frame" x="103" y="197" width="200" height="30"/>
                                     <mask key="constraints">
                                         <include reference="Quj-yY-l4A"/>
                                     </mask>
@@ -115,6 +106,15 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="11"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="ZigZaga" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AbW-07-BmS">
+                                <rect key="frame" x="110" y="183" width="154" height="61"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="29"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="155" y="149" width="96" height="40"/>
+                                </variation>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.65098039220000004" green="0.85098039219999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -2731,7 +2731,7 @@
                                                     <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="kfI-an-hlD">
-                                                            <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                                                            <variation key="heightClass=regular-widthClass=compact" constant="30"/>
                                                         </constraint>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -2749,7 +2749,9 @@
                                                 </textField>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="centerY" secondItem="cSy-j4-VMc" secondAttribute="centerY" constant="-0.5" id="GkP-Rx-kMX"/>
+                                                <constraint firstAttribute="centerY" secondItem="cSy-j4-VMc" secondAttribute="centerY" constant="-0.5" id="GkP-Rx-kMX">
+                                                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                                                </constraint>
                                                 <constraint firstAttribute="trailingMargin" secondItem="cSy-j4-VMc" secondAttribute="trailing" constant="5" id="Jfh-QP-V1s"/>
                                                 <constraint firstItem="cSy-j4-VMc" firstAttribute="leading" secondItem="tFU-1x-HOn" secondAttribute="leadingMargin" constant="5" id="SvQ-4g-swE"/>
                                             </constraints>
@@ -2836,7 +2838,8 @@
                                                             <exclude reference="Aw9-4q-rtc"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="13" y="0.0" width="374" height="31"/>
                                                         <mask key="constraints">
                                                             <include reference="Aw9-4q-rtc"/>
                                                         </mask>
