Field validation warnings

--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -129,7 +129,9 @@
                                 <variation key="heightClass=regular-widthClass=compact" constant="15"/>
                             </constraint>
                             <constraint firstAttribute="centerX" secondItem="Whu-91-IML" secondAttribute="centerX" id="gER-lr-JnM"/>
-                            <constraint firstItem="yfi-eP-Fel" firstAttribute="top" secondItem="hV2-RP-FI6" secondAttribute="bottom" constant="15" id="kGu-9m-QQB"/>
+                            <constraint firstItem="yfi-eP-Fel" firstAttribute="top" secondItem="hV2-RP-FI6" secondAttribute="bottom" constant="15" id="kGu-9m-QQB">
+                                <variation key="heightClass=regular-widthClass=compact" constant="8"/>
+                            </constraint>
                             <constraint firstAttribute="centerX" secondItem="yfi-eP-Fel" secondAttribute="centerX" id="mut-cF-hpx"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="u5Z-pp-shY" secondAttribute="bottom" constant="30" id="nuJ-xg-dwC"/>
                             <constraint firstAttribute="centerX" secondItem="AbW-07-BmS" secondAttribute="centerX" id="r7b-x4-jNt"/>
@@ -404,6 +406,15 @@
                                     <action selector="submit:" destination="0Ir-4E-hxe" eventType="touchUpInside" id="L23-Pt-85A"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1x9-4d-Grc">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="179" y="232" width="42" height="21"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.65098039220000004" green="0.85098039219999999" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -417,6 +428,7 @@
                                 <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                             </constraint>
                             <constraint firstItem="bfg-yk-0yH" firstAttribute="top" secondItem="ZT7-5p-c6k" secondAttribute="bottom" constant="5" id="J3B-eF-1e5"/>
+                            <constraint firstItem="1x9-4d-Grc" firstAttribute="centerX" secondItem="oCu-GW-5la" secondAttribute="centerX" id="MyA-ZP-pJV"/>
                             <constraint firstAttribute="centerX" secondItem="oCu-GW-5la" secondAttribute="centerX" id="Oez-Wo-D94"/>
                             <constraint firstItem="MIN-FH-U4n" firstAttribute="top" secondItem="nmO-8h-8Md" secondAttribute="bottom" constant="1" id="Qf0-E3-Tq2">
                                 <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
@@ -426,6 +438,7 @@
                             <constraint firstItem="ZJx-q9-F7Q" firstAttribute="top" secondItem="pvi-58-EPT" secondAttribute="bottom" constant="5" id="XpH-o1-BFA"/>
                             <constraint firstItem="pvi-58-EPT" firstAttribute="leading" secondItem="ZJx-q9-F7Q" secondAttribute="leading" id="btr-0i-gyC"/>
                             <constraint firstItem="bfg-yk-0yH" firstAttribute="top" secondItem="ov2-11-r07" secondAttribute="bottom" constant="50" id="gQZ-CQ-6dj"/>
+                            <constraint firstItem="1x9-4d-Grc" firstAttribute="top" secondItem="oCu-GW-5la" secondAttribute="bottom" constant="8" id="gca-p1-Ngy"/>
                             <constraint firstItem="MIN-FH-U4n" firstAttribute="leading" secondItem="nmO-8h-8Md" secondAttribute="leading" id="mcA-Qc-OGz"/>
                             <constraint firstItem="ZT7-5p-c6k" firstAttribute="trailing" secondItem="bfg-yk-0yH" secondAttribute="trailing" id="nwH-Gh-O1V"/>
                             <constraint firstAttribute="centerX" secondItem="pvi-58-EPT" secondAttribute="centerX" id="rA6-DM-ZOq"/>
@@ -441,26 +454,29 @@
                                 <exclude reference="bio-aQ-VsB"/>
                                 <exclude reference="kUR-3K-qqK"/>
                                 <exclude reference="oCu-GW-5la"/>
+                                <exclude reference="1x9-4d-Grc"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="SWG-IT-eBm"/>
                                 <exclude reference="1Ha-gL-Gog"/>
                                 <exclude reference="6Go-6F-ki6"/>
                                 <exclude reference="Qf0-E3-Tq2"/>
                                 <exclude reference="mcA-Qc-OGz"/>
-                                <exclude reference="7gU-0f-ZN7"/>
-                                <exclude reference="XpH-o1-BFA"/>
-                                <exclude reference="J3B-eF-1e5"/>
-                                <exclude reference="gQZ-CQ-6dj"/>
-                                <exclude reference="9YY-MW-lQM"/>
-                                <exclude reference="SWG-IT-eBm"/>
                                 <exclude reference="94F-IQ-SyR"/>
                                 <exclude reference="F5T-5D-HbB"/>
                                 <exclude reference="btr-0i-gyC"/>
                                 <exclude reference="rA6-DM-ZOq"/>
-                                <exclude reference="VBE-nb-oOl"/>
+                                <exclude reference="7gU-0f-ZN7"/>
+                                <exclude reference="XpH-o1-BFA"/>
+                                <exclude reference="9YY-MW-lQM"/>
                                 <exclude reference="5Q7-jd-2kN"/>
                                 <exclude reference="Oez-Wo-D94"/>
+                                <exclude reference="J3B-eF-1e5"/>
+                                <exclude reference="gQZ-CQ-6dj"/>
                                 <exclude reference="nwH-Gh-O1V"/>
+                                <exclude reference="VBE-nb-oOl"/>
+                                <exclude reference="MyA-ZP-pJV"/>
+                                <exclude reference="gca-p1-Ngy"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -474,26 +490,29 @@
                                 <include reference="bio-aQ-VsB"/>
                                 <include reference="kUR-3K-qqK"/>
                                 <include reference="oCu-GW-5la"/>
+                                <include reference="1x9-4d-Grc"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="SWG-IT-eBm"/>
                                 <include reference="1Ha-gL-Gog"/>
                                 <include reference="6Go-6F-ki6"/>
                                 <include reference="Qf0-E3-Tq2"/>
                                 <include reference="mcA-Qc-OGz"/>
-                                <include reference="7gU-0f-ZN7"/>
-                                <include reference="XpH-o1-BFA"/>
-                                <include reference="J3B-eF-1e5"/>
-                                <include reference="gQZ-CQ-6dj"/>
-                                <include reference="9YY-MW-lQM"/>
-                                <include reference="SWG-IT-eBm"/>
                                 <include reference="94F-IQ-SyR"/>
                                 <include reference="F5T-5D-HbB"/>
                                 <include reference="btr-0i-gyC"/>
                                 <include reference="rA6-DM-ZOq"/>
-                                <include reference="VBE-nb-oOl"/>
+                                <include reference="7gU-0f-ZN7"/>
+                                <include reference="XpH-o1-BFA"/>
+                                <include reference="9YY-MW-lQM"/>
                                 <include reference="5Q7-jd-2kN"/>
                                 <include reference="Oez-Wo-D94"/>
+                                <include reference="J3B-eF-1e5"/>
+                                <include reference="gQZ-CQ-6dj"/>
                                 <include reference="nwH-Gh-O1V"/>
+                                <include reference="VBE-nb-oOl"/>
+                                <include reference="MyA-ZP-pJV"/>
+                                <include reference="gca-p1-Ngy"/>
                             </mask>
                         </variation>
                     </view>
@@ -511,6 +530,7 @@
                         <outlet property="first" destination="nmO-8h-8Md" id="DNa-Z4-npP"/>
                         <outlet property="last" destination="bfg-yk-0yH" id="Hls-xs-C9b"/>
                         <outlet property="number" destination="MIN-FH-U4n" id="Ni6-hk-b3o"/>
+                        <outlet property="warningLabel" destination="1x9-4d-Grc" id="gqg-OI-IUK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AYJ-CB-yNk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -613,7 +633,8 @@
                                                             <exclude reference="LYE-WV-X8M"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="14" y="5" width="83" height="83"/>
                                                         <mask key="constraints">
                                                             <include reference="Epd-et-v5E"/>
                                                             <include reference="LYE-WV-X8M"/>
@@ -624,12 +645,18 @@
                                                     <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="10"/>
                                                     <nil key="highlightedColor"/>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="107" y="10" width="199" height="12"/>
+                                                    </variation>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edU-Av-GjQ">
                                                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                     <state key="normal" image="TrashCanSmall.png">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="232" y="38" width="22" height="22"/>
+                                                    </variation>
                                                     <connections>
                                                         <action selector="deleteSelected:" destination="MAP-Kg-YVT" eventType="touchUpInside" id="oUO-aW-4rV"/>
                                                     </connections>
@@ -639,6 +666,9 @@
                                                     <state key="normal" image="Refresh22.png">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="275" y="38" width="22" height="22"/>
+                                                    </variation>
                                                     <connections>
                                                         <action selector="bumpButton:" destination="MAP-Kg-YVT" eventType="touchUpInside" id="2ui-fb-lla"/>
                                                     </connections>
@@ -648,6 +678,9 @@
                                                     <state key="normal" image="EditPost22.png">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="189" y="58" width="22" height="22"/>
+                                                    </variation>
                                                     <connections>
                                                         <action selector="editSelected:" destination="MAP-Kg-YVT" eventType="touchUpInside" id="3fH-zP-TeI"/>
                                                     </connections>
@@ -656,7 +689,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="bottomMargin" secondItem="bEC-9h-omf" secondAttribute="bottom" constant="22" id="17q-ZZ-0b9"/>
                                                 <constraint firstItem="bEC-9h-omf" firstAttribute="height" secondItem="edU-Av-GjQ" secondAttribute="height" id="3Ph-ji-nKh"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="wXB-5n-lhK" secondAttribute="trailing" constant="75" id="9Ui-jh-H0y"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="wXB-5n-lhK" secondAttribute="trailing" constant="10" id="9Ui-jh-H0y"/>
                                                 <constraint firstItem="DgI-iK-Fkb" firstAttribute="top" secondItem="fia-nS-lww" secondAttribute="top" constant="-20" id="9kK-8Q-ctZ">
                                                     <variation key="heightClass=regular-widthClass=compact" constant="-5"/>
                                                 </constraint>
@@ -798,7 +831,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xph-O8-dcg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3741" y="-2030.25"/>
+            <point key="canvasLocation" x="3741" y="-2031"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="TKg-P2-vvD">
@@ -1093,9 +1126,12 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55l-gM-j6T">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="12"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="21" y="185" width="358" height="21"/>
+                                </variation>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Prefered email (optional)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m2w-Xv-GQw">
                                 <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
@@ -2838,8 +2874,7 @@
                                                             <exclude reference="Aw9-4q-rtc"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="13" y="0.0" width="374" height="31"/>
+                                                    <variation key="heightClass=regular-widthClass=compact">
                                                         <mask key="constraints">
                                                             <include reference="Aw9-4q-rtc"/>
                                                         </mask>
